Feat: Se incluyen icones de tecnologias

--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
           <a href="https://wa.me/3102618792" target="_blank">
             <div class="contban">
               <div class="imgban">
-                <img class="banimg" src="imagen\wa.png" />
+                <img class="banimg" src="./imagen/github-mark.png" />
               </div>
               <div class="btnban">
-                <h2>310 261 8792</h2>
+                <a
+                  href="https://github.com/DiegoFerBZ?tab=repositories"
+                  target="_blank"
+                  >Repositorio</a
+                >
               </div>
             </div>
           </a>
@@ -47,7 +51,36 @@
               <img class="banimg" src="imagen\email.png" />
             </div>
             <div class="btnban">
-              <h2>diegofer1110@gmail.com</h2>
+              <h2>dfbecerra@ucompensar.edu.co</h2>
+            </div>
+            <button class="desplegar">
+              <div class="contban">
+                <div class="imgban">
+                  <img class="banimg" src="imagen\cert.png" />
+                </div>
+                <div class="btnban">
+                  <h2>Certificados</h2>
+                </div>
+              </div>
+            </button>
+            <div class="infob">
+              <ul>
+                <li>
+                  <a href="certificados\misionTIC2020.pdf" target="_blank">
+                    <p>Diplomado Misión TIC 2022</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="certificados\proyectossabana.pdf" target="_blank">
+                    <p>Diplomado en gerencia de proyectos</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="certificados\unidiploma.pdf" target="_blank">
+                    <p>Pregrado en ingeniería de petróleos</p>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
@@ -88,15 +121,14 @@
         <div class="tit">
           <h2>Habilidades</h2>
         </div>
-        <div class="barra">
-          <p class="labelskill">Java</p>
-          <progress value="30" max="100"></progress>
-          <p class="labelskill">C#</p>
-          <progress value="50" max="100"></progress>
-          <p class="labelskill">Javascript</p>
-          <progress value="40" max="100"></progress>
-          <p class="labelskill">SQL</p>
-          <progress value="50" max="100"></progress>
+        <div class="icons-box">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-csharp-1175240.png?f=webp&w=256" alt="C-sharp">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-java-59-1174952.png?f=webp&w=256" alt="Java">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-docker-3628734-3029959.png?f=webp&w=256" alt="Docker">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-typescript-3629120-3030260.png?f=webp&w=256" alt="Typescript">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-aws-1869025-1583149.png?f=webp&w=256" alt="Aws">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-angular-226066.png?f=webp&w=256" alt="Angular">
+          <img src="https://cdn.iconscout.com/icon/free/png-512/free-net-51-190792.png?f=webp&w=256" alt="DotNet">
         </div>
 
         <button class="desplegar">
@@ -112,13 +144,13 @@
         <div class="infob">
           <ul>
             <li>
-              <p>Técnico en programación de software</p>
+              <p>Técnico en programación de software</p> <br>
               <b>Desde:</b>Sep 2021 – <b>Hasta:</b>Nov 2022 <br /><b>SENA</b>
               <hr />
               <br />
             </li>
             <li>
-              <p>Diplomado Misión TIC 2022</p>
+              <p>Diplomado Misión TIC 2022</p> <br>
               <b>Desde:</b>Mayo 2021 – <b>Hasta:</b>Dic 2021 <br /><b
                 >Universidad Industrial de Santander</b
               >
@@ -126,7 +158,7 @@
               <br />
             </li>
             <li>
-              <p>Diplomado en gerencia de proyectos</p>
+              <p>Diplomado en gerencia de proyectos</p> <br>
               <b>Desde:</b>Ago 2019 – <b>Hasta:</b>Dic 2019 <br /><b
                 >Universidad de la sabana</b
               >
@@ -134,7 +166,7 @@
               <br />
             </li>
             <li>
-              <p>Pregrado en ingeniería de petróleos</p>
+              <p>Pregrado en ingeniería de petróleos</p> <br>
               <b>Desde:</b>Ago 2012 – <b>Hasta:</b> Jul 2018 <br /><b
                 >Universidad Industrial de Santander</b
               >
@@ -142,67 +174,74 @@
             </li>
           </ul>
         </div>
-        <button class="desplegar">
-          <div class="contban">
-            <div class="imgban">
-              <img class="banimg" src="imagen\cert.png" />
-            </div>
-            <div class="btnban">
-              <h2>Certificados</h2>
-            </div>
-          </div>
-        </button>
-        <div class="infob">
-          <ul>
-            <li>
-              <a href="certificados\misionTIC2020.pdf" target="_blank">
-                <p>Diplomado Misión TIC 2022</p>
-              </a>
-            </li>
-            <li>
-              <a href="certificados\proyectossabana.pdf" target="_blank">
-                <p>Diplomado en gerencia de proyectos</p>
-              </a>
-            </li>
-            <li>
-              <a href="certificados\unidiploma.pdf" target="_blank">
-                <p>Pregrado en ingeniería de petróleos</p>
-              </a>
-            </li>
-          </ul>
-        </div>
+        
       </div>
     </div>
     <div class="container" id="contenedor2">
-        <div class="tit">
-          <div class="imgban">
-            <img class="banimg" src="imagen\project.png" />
-          </div>
-          <div class="btnban">
-            <h2>Proyectos Personales</h2>
-          </div>
+      <div class="tit">
+        <div class="imgban">
+          <img class="banimg" src="imagen\project.png" />
         </div>
+        <div class="btnban">
+          <h2>Proyectos Personales</h2>
+        </div>
+      </div>
+      <div class="fancy-hr"></div>
 
       <div class="contban">
         <div class="grid-container">
-            <a href="https://zenseit.github.io/Rockola_front/" target="_blank" class="card-proyecto">
-                <p>LaRockola.com</p>
-                <b>Sitio web creado con el backend en java 8 y desarrollado con el framework Spring Boot.<br />Para el frontend fue usada la librería de React js. Todo se desplegó usando Heroku y github pages</b>
-            </a>
-            <a href="https://zenseit.github.io/Rockola_front/" target="_blank" class="card-proyecto">
-                <p>LaRockola.com</p>
-                <b>Sitio web creado con el backend en java 8 y desarrollado con el framework Spring Boot.<br />Para el frontend fue usada la librería de React js. Todo se desplegó usando Heroku y github pages</b>
-            </a>
-            <a href="https://zenseit.github.io/Rockola_front/" target="_blank" class="card-proyecto">
-                <p>LaRockola.com</p>
-                <b>Sitio web creado con el backend en java 8 </b>
-            </a>
-            <a href="https://zenseit.github.io/Rockola_front/" target="_blank" class="card-proyecto">
-                <p>LaRockola.com</p>
-                <b>Sitio web creado con el backend en java 8 y desarrollado con el framework Spring Boot.<br />Para el frontend fue usada la librería de React js. Todo se desplegó usando Heroku y github pages</b>
-            </a>
+          <a
+            href="https://zenseit.github.io/Rockola_front/"
+            target="_blank"
+            class="card-proyecto"
+          >
+            <p>LaRockola.com</p>
+            <b
+              >Sitio web creado con el backend en java 8 y desarrollado con el
+              framework Spring Boot.<br />Para el frontend fue usada la librería
+              de React js. Todo se desplegó usando Heroku y github pages</b
+            >
+          </a>
+          <a
+            href="https://github.com/ZenSeit/SnakeGame"
+            target="_blank"
+            class="card-proyecto"
+          >
+            <p>Snake Game</p>
+            <b>
+              Clasico juego de la culebrita realizado en java 8. Tiene sistema
+              de puntuacion. La logica del juego y colisiones son realizadas
+              utilizando el lenguaje sin ningun engine externo.
+            </b>
+          </a>
+          <a
+            href="https://github.com/ZenSeit/MrComedy"
+            target="_blank"
+            class="card-proyecto"
+          >
+            <p>Mr Comedy</p>
+            <b
+              >Proyecto realizado usando react en donde se consume un API
+              externa que provee chistes de diferentes areas.
+            </b>
+          </a>
+          <a
+            href="https://github.com/ZenSeit/TenzieGame"
+            target="_blank"
+            class="card-proyecto"
+          >
+            <p>Tenzie Game</p>
+            <b>Juego sencillo de prueba para probar los estados de react</b>
+          </a>
+          <a
+            href="https://github.com/ZenSeit/fitnessCal"
+            target="_blank"
+            class="card-proyecto"
+          >
+            <p>FitnetssCal</p>
+            <b>Aplicacion backend y front que se encarga de calcular las calorias necesarias del usuario con el fin de ayudar a crear una dieta a la medida de las necesidades</b>
+          </a>
         </div>
-        
       </div>
     </div>
   </body>
